# arbor

./: .gitignore  .tree  Cargo.toml  README.md  build_ui_web.sh  test.rope  test.tree
.github/workflows/: rust.yml
arbor_cli/: Cargo.toml
arbor_cli/src/: action.rs  main.rs
arbor_core/: .vimspector.json  Cargo.toml  simple_test.tree.bkp
arbor_core/.cargo/: config.toml
arbor_core/benches/: benchmark.rs
arbor_core/src/: cmd.rs  editor.rs  ensure.rs  lib.rs  stack_str.rs  tree.rs
arbor_core/tests/: tests.rs
arbor_reader/: .vimspector.json  Cargo.toml
arbor_reader/data/shaders/: compile.sh  compile_mac.sh  scene.frag.spv  shape.wgsl  sprite.frag  sprite.frag.spv  sprite.vert  sprite.vert.spv  sprite.wgsl
arbor_reader/data/text/: hello.txt
arbor_reader/shaders/: compile.sh  scene.frag.spv  scene.vert  scene.vert.spv
arbor_reader/src/: brushes.rs  button.rs  event.rs  gfx.rs  main.rs  static.rs  static_init.rs  text.rs  ui.rs  window.rs
arbor_ui/: .vimspector.json  Cargo.toml
arbor_ui/src/: gfx.rs  lib.rs  main.rs  ui.rs  util.rs
docs/: arbor_ui.js  arbor_ui_bg.wasm  index.html
src/: main.rs
yarn-parser/: Cargo.toml  README.md
yarn-parser/benches/: benchmark.rs
yarn-parser/data/: helloworld.yarn
yarn-parser/src/: lib.rs  pool.rs
