[package]
name = "dialogue_tree"
version = "0.1.0"
authors = ["David Schwarz <dsdavidschwarz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
ropey = "1.2.0"
petgraph = { version = "0.5.1", features = ["serde-1"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.59"
shellwords = "1.1.0"
rayon = "1.5.0"
displaydoc = "0.1"
