[package]
name = "arbor_cli"
version = "0.1.0"
authors = ["David Schwarz <dsdavidschwarz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellwords = "1.1.0"
arbor_core = { version = "0.1.0", path = "../arbor_core" }
