[package]
name = "arbor_core"
version = "0.1.0"
authors = ["David Schwarz <dsdavidschwarz@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
nanoserde = "0.1"
seahash = "4.1.0"
fixedbitset = "0.4"

[dev-dependencies]
simple_logger = "1.11"
chrono = "0.4"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
