[package]
name = "arbor_reader"
version = "0.1.0"
authors = ["David Schwarz <dsdavidschwarz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
wgpu = "0.8"
bytemuck = { version = "1.5", features = ["derive"]}
log = "0.4"
futures = "0.3"
wgpu_glyph = "0.12"
anyhow = "1.0"
image = "0.23"
