[package]
name = "arbor_reader"
version = "0.1.0"
resolver = "2"
authors = ["David Schwarz <dsdavidschwarz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
wgpu = { version = "0.11", features = ["spirv"] }
bytemuck = { version = "1.5", features = ["derive"]}
log = "0.4"
pollster = "0.2"
arbor_core = { version = "0.1.0", path = "../arbor_core" }
glyph_brush = "0.7"
png = "0.17"
