[package]
name = "arbor_ui"
version = "0.1.0"
authors = ["David Schwarz <dsdavidschwarz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
chrono = "0.4"
futures-lite = "1.11"
anyhow = "1.0"
egui = { version="0.11", features = ["persistence"] }
epi = "0.11"
egui_wgpu_backend = { git = "https://github.com/hasenbanck/egui_wgpu_backend" }
egui_winit_platform = { version = "0.6", features = ["clipboard"] }
wgpu = "0.8"
winit = "0.24"
bytemuck = { version = "1.4.1", features = ["derive"]}
serde = "1.0"
rayon = "1.5"
cgmath = "0.18"
log = "0.4"
futures = "0.3"
bincode = "1.3"
arbor_core = { version = "0.1.0", path = "../arbor_core" }
