[package]
name = "arbor_ui"
version = "0.1.0"
authors = ["David Schwarz <dsdavidschwarz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
#
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
simple_logger = "1.11.0"
rand = "0.8"
getrandom = "0.2"
chrono = "0.4"
futures-lite = "1.11"
anyhow = "1.0"
eframe = "0.11.0"
bytemuck = { version = "1.4.1", features = ["derive"]}
rayon = "1.5"
cgmath = "0.18"
log = "0.4"
futures = "0.3"
bincode = "1.3"
arbor_core = { version = "0.1.0", path = "../arbor_core" }

[features]
http = ["eframe/http"]
js = ["getrandom/js"]
