[package]
name = "yarn-parser"
version = "0.1.0"
resolver = "2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = {version = "3.9.1", features = ["boxed"]}
ach-ring = "0.1.7"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
