[package]
name = "yarn-parser"
version = "0.1.0"
resolver = "2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
staticvec = "0.11.3"
bumpalo = "3.9.1"

[dev-dependencies]
criterion = "0.3"
mhlog = "3.0.1"

[[bench]]
name = "benchmark"
harness = false
